--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 authors = ["Kyle Laker <kyle@laker.email>"]
 
 [dependencies]
+nix = "0.10.0"
+
+[dependencies.gtk]
+version = "0.4.0"
+features = ["v3_10"]
