--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ authors = ["Kyle Laker <kyle@laker.email>"]
 
 [dependencies]
 nix = "0.10.0"
+libnotify = "1.0.3"
 
 [dependencies.gtk]
-version = "0.4.0"
+version = "0.3.0"
 features = ["v3_10"]
